:recycle: 예외 수정